--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
   <div id="app" class='content'>APPLICATION CONTENT</div>
 <!-- ifram里面要访问外部的__REACT_DEVTOOLS_GLOBAL_HOOK__ 变量 -->
   <script>__REACT_DEVTOOLS_GLOBAL_HOOK__ = parent.__REACT_DEVTOOLS_GLOBAL_HOOK__</script>
-  <script type="text/javascript" src="/gallery-react/assets/app.js"></script>
+  <script type="text/javascript" src="assets/app.js"></script>
 </body>
 </html>
